crates/polychem/src/polymers/snapshots/polychem__polymers__polymerizer_state__tests__find_multiple_specific_free_groups-3.snap
---
source: crates/polychem/src/polymers/polymerizer_state.rs
description: nonexistent_group
expression: out
---
  × the functional group "Amino" at="N-Terminal" does not exist on residue 0
