crates/polychem/src/polymers/snapshots/polychem__polymers__polymerizer_state__tests__find_multiple_specific_free_groups-4.snap
---
source: crates/polychem/src/polymers/polymerizer_state.rs
description: multiple_errors
expression: out
---
  × failed to find multiple of the requested free groups

Error: 
  × the functional group "Hydroxyl" at="Nonreducing End" of residue 0 was
  │ already modified, but must be free

Error: 
  × the functional group "Amino" at="N-Terminal" does not exist on residue 0
