crates/polychem/src/polymers/snapshots/polychem__polymers__polymerizer_state__tests__find_multiple_specific_free_groups.snap
---
source: crates/polychem/src/polymers/polymerizer_state.rs
description: invalid_target
expression: out
---
  × expected a target group matching "Hydroxyl", but got "Amino" at="N-
  │ Terminal"
