crates/polychem/src/polymers/snapshots/polychem__polymers__polymerizer_state__tests__find_multiple_unambiguous_free_groups-2.snap
---
source: crates/polychem/src/polymers/polymerizer_state.rs
description: ambiguous_group
expression: out
---
  × residue 0 contains more than 2 free target groups: "Hydroxyl" at="6-
  │ Position", "Hydroxyl" at="Nonreducing End", and "Hydroxyl" at="Reducing
  │ End"
  help: to resolve this ambiguity, specify the exact functional groups to
        modify
