crates/polychem/src/polymers/snapshots/polychem__polymers__polymerizer_state__tests__find_multiple_unambiguous_free_groups-3.snap
---
source: crates/polychem/src/polymers/polymerizer_state.rs
description: groups_occupied
expression: out
---
  × too few functional groups on residue 0 matching the target were free
  │ (2/3): "Hydroxyl" at="6-Position" is free, "Hydroxyl" at="Nonreducing End"
  │ is modified, and "Hydroxyl" at="Reducing End" is free
