crates/polychem/src/polymers/snapshots/polychem__polymers__polymerizer_state__tests__find_single_specific_free_groups-2.snap
---
source: crates/polychem/src/polymers/polymerizer_state.rs
description: duplicate_target_group
expression: out
---
  × encountered a duplicate target group: "Hydroxyl" at="Nonreducing End"
  help: check for typos, or try removing the duplicate target group
