crates/polychem/src/polymers/snapshots/polychem__polymers__polymerizer_state__tests__find_single_specific_free_groups-3.snap
---
source: crates/polychem/src/polymers/polymerizer_state.rs
description: invalid_target
expression: out
---
  × expected a target group matching "Crazy", but got "Hydroxyl"
  │ at="Nonreducing End"
