crates/polychem/src/polymers/snapshots/polychem__polymers__polymerizer_state__tests__find_single_specific_free_groups-4.snap
---
source: crates/polychem/src/polymers/polymerizer_state.rs
description: nonexistent_group
expression: out
---
  × the functional group "Hydroxyl" at="Nonreducing End" does not exist on
  │ residue 1
