crates/polychem/src/polymers/snapshots/polychem__polymers__polymerizer_state__tests__find_single_specific_free_groups-5.snap
---
source: crates/polychem/src/polymers/polymerizer_state.rs
description: group_occupied
expression: out
---
  × the functional group "Hydroxyl" at="Nonreducing End" of residue 0 was
  │ already modified, but must be free
