crates/polychem/src/polymers/snapshots/polychem__polymers__polymerizer_state__tests__find_single_specific_free_groups.snap
---
source: crates/polychem/src/polymers/polymerizer_state.rs
description: no_target_groups
expression: out
---
  × no target groups were provided, but you must provide at least one group to
  │ look for
